# rehash

./: Cargo.toml  README.md  build-wasm.sh  build.rs  build.sh  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
components/rehash-codec/: Cargo.toml
components/rehash-codec-ffi-bindings/: Cargo.toml
components/rehash-codec/codec/: Cargo.toml  build.rs
components/rehash-codec/codec-ffi/: Cargo.toml  build.rs
components/rehash-codec/codec-ffi/src/: codec_ffi.rs  lib.rs
components/rehash-codec/codec-proc-macro/: Cargo.toml
components/rehash-codec/codec-proc-macro/src/: lib.rs
components/rehash-codec/codec/src/: codec.rs  interface.rs  lib.rs
components/rehash-codec/codec/tests/: codec_test.rs
components/rehash-frontend/: Cargo.toml  build-frontend.sh
components/rehash-frontend/src/: lib.rs  prelude.rs
components/rehash-frontend/src/html/: html_callback.rs  html_events.rs  html_ui.rs  html_video.rs
components/rehash-frontend/src/tauri/: mod.rs  tauri_callback.rs  tauri_events.rs
components/rehash-frontend/src/video/: event.rs  mod.rs  video_callback.rs  video_internal.rs  video_player.rs  video_ui.rs
components/rehash-loader/: Cargo.toml  build-loader.sh
components/rehash-loader/src/: lib.rs
components/rehash-utils/: Cargo.toml
components/rehash-utils/src/: codec.rs  errors.rs  lib.rs  logging.rs  wrappers.rs
components/wasm-bindings-lib/: Cargo.toml
components/wasm-bindings-lib/src/: lib.rs
components/wasm-frontend/: Cargo.toml  build-frontend.sh
components/wasm-frontend/src/: backend_callback_event.rs  event.rs  lib.rs  prelude.rs  utils.rs
components/wasm-frontend/src/html/: html_callback.rs  html_events.rs  html_ui.rs  html_video.rs  mod.rs
components/wasm-frontend/src/tauri/: tauri_callback.rs  tauri_events.rs
components/wasm-frontend/src/video/: event.rs  html_video.rs  video_callback.rs  video_callback_event.rs  video_internal.rs  video_player.rs  video_ui.rs
components/wasm-loader/: Cargo.toml  build-loader.sh
components/wasm-loader/src/: lib.rs
rehash-desktop/: Cargo.toml  build.rs  tauri.conf.json
rehash-desktop/capabilities/: default.json
rehash-desktop/icons/: icon.icns
rehash-desktop/rehash-win-installer/: Cargo.toml  rehash.wxs
rehash-desktop/rehash-win-installer/src/: lib.rs
rehash-desktop/src/: lib.rs  main.rs  video.rs
scripts/: build-rehash-codec-windows.ps1  build-wasm.sh  setup-ffmpeg-deps-linux.sh  setup-ffmpeg-deps-windows.ps1
src/: backend_callback_event.rs  callback_handler.rs  lib.rs  prelude.rs  utils.rs  video_player.rs  web_video_player.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/video/: callback_handler.rs  html_video.rs  mod.rs  video_callback_event.rs  video_internal.rs  video_player.rs
static/: index.html  style.css
