[package]
name = "rehash"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlVideoElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Window",
    "FileList",
    "File",
    "Url",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "DomRect",
]