[workspace]
members = [
    "rehash-desktop",
    "components/rehash-frontend",
    "components/rehash-loader",
    "components/rehash-utils",
    "components/rehash-codec/codec",
    "components/rehash-codec/codec-ffi",
    "components/rehash-codec/codec-proc-macro",
    "rehash-desktop/rehash-win-installer"
]

resolver = "3"
