[package]
name = "rehash-desktop"
version = "0.1.3"
description = "Rehash desktop"
authors = ["Gruncan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rehash_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.4.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.47.0"
rehash-utils = { path = "../components/rehash-utils", features = ["codec"] }