[package]
name = "rehash-loader"
version = "1.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
rehash-utils = { path = "../rehash-utils", features = ["tauri"] }

[dependencies.web-sys]
version = "0.3"
features = ["Blob", "BlobPropertyBag", "Url", "Document", "HtmlElement", "Window", "CssStyleDeclaration"]