[package]
name = "rehash-utils"
version = "0.4.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["Element"]

[features]
util = []
tauri = ["util"]