[package]
name = "rehash-wasm-frontend"
version = "0.3.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
wasm-bindings-lib = { path = "../wasm-bindings-lib", features = ["tauri"] }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "HtmlVideoElement", "HtmlInputElement", "HtmlButtonElement", "Window", "FileList", "File", "Url", "Event", "EventTarget", "KeyboardEvent", "MouseEvent", "DomRect", "SvgElement", "CssStyleDeclaration", "HtmlSpanElement", "BlobPropertyBag", "HtmlDivElement"]

#[alias]
#clean-all = "clean && rm -rf pkg"