[package]
name = "rehash-wasm-frontend"
version = "0.7.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
rehash-utils = { path = "../rehash-utils", features = ["tauri", "codec"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "HtmlVideoElement", "HtmlInputElement", "HtmlButtonElement", "Window", "FileList", "File", "Url", "Event", "EventTarget", "KeyboardEvent", "MouseEvent", "DomRect", "SvgElement", "CssStyleDeclaration", "HtmlSpanElement", "BlobPropertyBag", "HtmlDivElement", "MediaSource", "SourceBuffer"]

#[alias]
#clean-all = "clean && rm -rf pkg"