[package]
name = "rehash-wasm-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
wasm-bindings-lib = { path = "../wasm-bindings-lib", features = ["tauri"] }

[dependencies.web-sys]
version = "0.3"
features = ["Response"]